--- a/splashscreen.html
+++ b/splashscreen.html
@@ -42,7 +42,7 @@
             width: 120px;
             height: 120px;
             margin: 0 auto 30px;
-            background: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 1);
             border-radius: 30px;
             display: flex;
             align-items: center;
@@ -61,9 +61,9 @@
             z-index: -1;
         }
 
-        .logo svg {
-            width: 70px;
-            height: 70px;
+        .logo img {
+            width: 90%;
+            height: 90%;
         }
 
         h1 {
@@ -127,14 +127,15 @@
 <body>
     <div class="splash-container">
         <div class="logo">
-            <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <!-- <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"/>
-            </svg>
+            </svg> -->
+            <img src="./app-icon.png" alt="Tilt Orchestrator" />
         </div>
         <h1>Tilt Orchestrator</h1>
         <p>Simplify your microservices development</p>
         <div class="loader"></div>
     </div>
-    <div class="version">v0.0.1</div>
+    <!-- <div class="version">v0.0.1</div> -->
 </body>
 </html>
